# fiinito

./: pyproject.toml
app/: main.py
